--- a/app/src/main/res/layout/activity_score.xml
+++ b/app/src/main/res/layout/activity_score.xml
@@ -28,15 +28,17 @@
         android:layout_gravity="center">
 
         <com.google.android.material.progressindicator.CircularProgressIndicator
+            android:id="@+id/progress_circular"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:progress="60"
+            android:max="60"
             app:indicatorSize="200dp"
             app:trackThickness="10dp"
             />
 
         <TextView
+            android:id="@+id/tvScore"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="60.0%"
